--- a/styles.css
+++ b/styles.css
@@ -96,20 +96,21 @@ input[type="submit"]:hover {
   }
 
   h2 {
-    font-size: 24px;
+    font-size: 34px;
     text-shadow: 1px 1px 3px rgba(255, 255, 255, 0.5),
       2px 2px 4px rgba(255, 255, 255, 0.3); 
   }
 
   h3 {
-    font-size: 20px;
+    font-size: 30px;
     text-shadow: 1px 1px 3px rgba(255, 255, 255, 0.5),
       2px 2px 4px rgba(255, 255, 255, 0.3); 
   }
 
   input[type="submit"] {
-    font-size: 16px;
+    font-size: 26px;
     padding: 10px 20px;
+     border-radius: 15px;
   }
 }
 
