--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "Poppins", sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
   background-image: url("images/wallpaper.jpg");
   background-size: cover;
   background-position: center;
@@ -89,7 +89,7 @@ input[type="submit"]:hover {
 
 @media screen and (max-width: 600px) {
   body {
-    background-image: url("images/images1.jpeg");
+    background-image: url("images/phone.jpg");
   }
   form {
     width: 80%;
@@ -115,7 +115,7 @@ input[type="submit"]:hover {
 
 @media screen and (max-height: 500px) {
   body {
-    background-image: url("images/images1.jpeg");
+    background-image: url("images/phone.jpg");
   }
   form {
     height: 250px;
